--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@nuxt/image": "1.9.0",
     "@pinia/nuxt": "^0.9.0",
+    "dayjs": "^1.11.13",
     "nuxt": "^3.15.4",
     "pinia": "^2.3.1",
     "vue": "latest",
