--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "nuxt": "^3.15.4",
     "pinia": "^2.3.1",
     "vue": "latest",
+    "vue-dompurify-html": "^5.2.0",
     "vue-router": "latest"
   },
   "devDependencies": {
