--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@ node_modules
 # Logs
 logs
 *.log
+.clinerules
+notes
 
 # Misc
 .DS_Store
@@ -22,5 +24,3 @@ logs
 .env
 .env.*
 !.env.example
-
-notes
